--- a/IntegratorAutomation/pom.xml
+++ b/IntegratorAutomation/pom.xml
@@ -89,6 +89,14 @@
     <artifactId>log4j-core</artifactId>
     <version>2.20.0</version>
   </dependency>
+  
+  <!-- https://mvnrepository.com/artifact/io.rest-assured/json-schema-validator -->
+<dependency>
+    <groupId>io.rest-assured</groupId>
+    <artifactId>json-schema-validator</artifactId>
+    <version>5.4.0</version>
+</dependency>
+
 
   </dependencies>
 </project>
